--- a/css/styles.css
+++ b/css/styles.css
@@ -60,11 +60,11 @@ canvas {
 #particles-js {
   position: absolute;
   width: 100%;
-  height: 105%;
+  height: 100%;
   background-color: #b61924;
   background-image: url("");
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: auto;
   background-position: 50% 50%;
 }
 
