--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -9,7 +9,7 @@ html {
     margin: 30px 0 0 0;
 }
 .has-bg-image {
-    background-image: url('../images/cover10.webp'), url('../images/cover10.JPG');
+    background-image: url('../images/amongus.webp'), url('../images/amongus.jpg');
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
@@ -37,6 +37,9 @@ html {
 }
 .skill-icon {
     padding: 20px;
+}.hero-particle {
+  width: 100%;
+  height: 100%;
 }
 
 
@@ -61,7 +64,7 @@ canvas {
   background-color: #b61924;
   background-image: url("");
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: auto;
   background-position: 50% 50%;
 }
 
