--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,6 +1,12 @@
 html {
     scroll-behavior: smooth;
 }
+.title {
+  color: #e6f1ff;
+}
+.heading {
+  color: #a8b2d1;
+}
 .is-180x180{
     height: 180px;
     width: 180px;
@@ -31,21 +37,90 @@ html {
 }
 .skill-card {
     height: 100%;
+    color: #64ffda;
+    background-color: #112240;
+}
+.skill-card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  color: #64ffda;
 }
 .skill-title {
     font-weight: bold;
 }
 .skill-icon {
     padding: 20px;
-}.hero-particle {
-  width: 100%;
+}
+.project-list > li{
+  margin: 30px 0 0 0;
+}
+.card {
   height: 100%;
+  color: #e6f1ff;
+  background-color: #112240;
+  transition: 0.3s;
+}
+.card:hover {
+  box-shadow: 0 8px 16px 0 #64ffda;
+  color: #64ffda;
+}
+.card-content:hover {
+  box-shadow: 0 8px 16px 0 #64ffda;
+  color: #64ffda;
+}
+.project-card {
+  height: 100%;
+  color: #e6f1ff;
+  background-color: #112240;
+  transition: 0.3s;
+}
+.project-card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  color: #64ffda;
+}
+.project-title {
+  font-weight: bold;
+}
+.project-icon {
+  padding: 20px;
+}
+.media-content {
+  color: #e6f1ff;
+}
+.media-content:hover {
+  color: #64ffda;
+}
+.particle-body {
+  font-size: .8em;
+  text-align: left;
+  text-indent: 4px;
+  line-height: 14px;
+  padding-bottom: 2px;
+  font-family: Helvetica, Arial, sans-serif;
+  font-weight: bold;
+}
+.timeline-summary {
+  color: #a8b2d1;
+}
+
+.card {
+  /* Add shadows to create the "card" effect */
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+}
+/* On mouse-over, add a deeper shadow */
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
 
 
 /* ---- reset ---- */
 
 body {
+  color: #0a192f;
+  background: #0a192f;
+}
+
+/* body {
   margin: 0;
   font:normal 75% Arial, Helvetica, sans-serif;
 }
@@ -53,7 +128,7 @@ body {
 canvas {
   display: block;
   vertical-align: bottom;
-}
+} */
 
 /* ---- particles.js container ---- */
 
@@ -61,7 +136,7 @@ canvas {
   position: absolute;
   width: 100%;
   height: 100%;
-  background-color: #b61924;
+  background-color: #0a192f;
   background-image: url("");
   background-repeat: no-repeat;
   background-size: auto;
@@ -87,7 +162,13 @@ canvas {
 }
 
 .js-count-particles{
-  font-size: 1.1em;
+  font-size: .8em;
+  text-align: left;
+  text-indent: 4px;
+  line-height: 14px;
+  padding-bottom: 2px;
+  font-family: Helvetica, Arial, sans-serif;
+  font-weight: bold;
 }
 
 #stats,
