--- a/css/styles.css
+++ b/css/styles.css
@@ -15,7 +15,7 @@ html {
     margin: 30px 0 0 0;
 }
 .has-bg-image {
-    background-image: url('../images/amongus.webp'), url('../images/amongus.jpg');
+    background-image: url('../images/has-background-black-bis.webp'), url('../images/has-background-black-bis.jpg');
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
@@ -40,10 +40,10 @@ html {
     color: #64ffda;
     background-color: #112240;
 }
-.skill-card:hover {
+/* .skill-card:hover {
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
   color: #64ffda;
-}
+} */
 .skill-title {
     font-weight: bold;
 }
@@ -74,7 +74,7 @@ html {
   transition: 0.3s;
 }
 .project-card:hover {
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  box-shadow: 0 8px 16px 0 #64ffda;
   color: #64ffda;
 }
 .project-title {
@@ -86,9 +86,9 @@ html {
 .media-content {
   color: #e6f1ff;
 }
-.media-content:hover {
+/* .media-content:hover {
   color: #64ffda;
-}
+} */
 .particle-body {
   font-size: .8em;
   text-align: left;
@@ -102,15 +102,17 @@ html {
   color: #a8b2d1;
 }
 
-.card {
-  /* Add shadows to create the "card" effect */
+.title:hover {
+  color: #64ffda;
+}
+
+/* .card {
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
 }
-/* On mouse-over, add a deeper shadow */
 .card:hover {
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-}
+} */
 
 
 /* ---- reset ---- */
